--- a/themes/hexo-theme-lite-master/_config.yml
+++ b/themes/hexo-theme-lite-master/_config.yml
@@ -82,12 +82,11 @@ theme_layout:
 # -------------------------------------------------------
 
 social:
-  github: https://github.com/heskeybaozi
+  github: https://www.aliyundrive.com/s/xGDhq6G4F76
   weibo: http://weibo.com/52hezhiyu
 
   # Email link, reference to https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks#E-mail_links
-  email: mailto:hezhiyu233@foxmail.com
-
+  email: mailto:286076062@qq.com
 
 social_icons:
   enable: true
@@ -146,5 +145,5 @@ google_analytics:
 # powered_by: false
 # powered_by: ''
 powered_by:
-  text:  Hexo Theme Lite
-  url:  https://github.com/HeskeyBaozi/hexo-theme-lite/ # or false to disable link
+  text: 猛男妙妙屋ChatGPT（免费）
+  url:  https://menghumenghu9527.online/
