--- a/themes/hexo-theme-lite-master/_config.yml
+++ b/themes/hexo-theme-lite-master/_config.yml
@@ -85,10 +85,10 @@ social:
   github: https://www.aliyundrive.com/s/xGDhq6G4F76
   # weibo: http://weibo.com/
   
-  wechat: qq286076062
+  wechat url: /static/images/weixin.jpg
   # Email link, reference to https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks#E-mail_links
   email: mailto:286076062@qq.com
-  qq: 286076062
+  qq: [286076062]
 social_icons:
   enable: true
   # icon name docs: http://fontawesome.io/icons/
