--- a/themes/hexo-theme-lite-master/_config.yml
+++ b/themes/hexo-theme-lite-master/_config.yml
@@ -146,5 +146,5 @@ google_analytics:
 # powered_by: false
 # powered_by: ''
 powered_by:
-  text: 猛男妙妙屋ChatGPT（免费）
-  url:  https://menghumenghu9527.online/
+  text: 猛男妙妙屋（新版Blog）
+  url:  https://mehumehu.icu/
